sumo/tests/jtrrouter/errors/sinks/false_edge2__multiple_sinks/options.jtrrouter
--net-file=input_net.net.xml --flows=input_flows.flows.xml --output-file=routes.rou.xml --turn-defaults=50,50,0,0 --sinks=end,xxx,left2end --ignore-errors

